--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div>
       <img class="upper_cloud" src="images/cloud.png" alt="cloud_image">
       <h1>I'm Tushar Kaundal‍</h1>
-      <p style="font-size:20px;">a <span class="pro">web</span> designer</p>
+      <p style="font-size:20px;">a <span class="pro">web</span> designer and Mlops</p>
       <img class="bottom_cloud" src="images/cloud.png" alt="cloud_image">
       <img src="images/mountain.png" alt="mountain_image">
     </div>
